# shoot_em_up

./: .clang-format  .editorconfig  .gitignore  Makefile  PROGRESS.md  README.md
game_01/: build.sh
game_01/src/: main.c  setup.c  setup.h
game_02/src/: common.h  constant.h  draw.c  input.c  main.c  structs.h
game_03/src/: constant.h  draw.h  input.c  main.c  structs.h
game_04/: build.sh
game_04/src/: common.h  draw.c  input.c  main.c  setup.c  structs.h
game_05/: Makefile
game_05/src/: constant.h  draw.c  stage.c  structs.h
game_06/: build.sh
game_06/src/: common.h  constant.h  draw.c  setup.c  stage.c
game_07/: build.sh
game_07/src/: constant.h  stage.c  util.c  util.h
game_08/src/: common.h  constant.h  draw.h  input.c  stage.c  structs.h
game_09/: build.sh
game_09/src/: common.h  constant.h  main.c  setup.c  stage.c
game_10/: Makefile  compile_commands.json
game_10/include/: common.h  constant.h  draw.h  setup.h  structs.h  util.h
game_10/src/: draw.c  input.c  main.c  setup.c  stage.c  structs.h  util.c
game_11/: .clang-format  compile_commands.json
game_11/src/: draw.c  (+3 more)
game_12/: CMakeLists.txt  compile_commands.json
game_12/include/: constant.h  draw.h  stage.h  structs.h
game_12/src/: main.c  music.c
game_13/: .gitignore
include/: background.h  common.h  core.h  game_state.h  graphics.h  highscores.h  input.h  sounds.h  stage.h  texts.h  titles.h  types.h  util.h
src/: background.c  core.c  draw.c  entity.c  game_state.c  graphics.c  highscores.c  init.c  input.c  main.c  sounds.c  stage.c  texts.c  titles.c  util.c
(+6 files in other folders)
